# prism-docs

./: .coveragerc  README.md  clean-workspace.sh  config.example.yaml  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
demo/DeepSeekMath_V2/bookmarks/: bookmarks.txt
demo/DeepSeekMath_V2/extract-text/: text.txt
demo/DeepSeekMath_V2/info/: info.txt
demo/DeepSeekMath_V2/metadata/: metadata.txt
demo/DeepSeekMath_V2/ocr/: DeepSeekMath_V2_ocr.txt
demo/DeepSeekMath_V2/validate/: validate.txt
demo/DeepSeek_OCR_paper/bookmarks/: bookmarks.txt
demo/DeepSeek_OCR_paper/extract-text/: DeepSeek_OCR_paper.txt
demo/DeepSeek_OCR_paper/info/: info.txt
demo/DeepSeek_OCR_paper/metadata/: metadata.txt
demo/DeepSeek_OCR_paper/ocr/: DeepSeek_OCR_paper_ocr.txt
demo/DeepSeek_OCR_paper/validate/: validate.txt
demo/DeepSeek_V3_2/bookmarks/: bookmarks.txt
demo/DeepSeek_V3_2/extract-text/: text.txt
demo/DeepSeek_V3_2/info/: info.txt
demo/DeepSeek_V3_2/metadata/: metadata.txt
demo/DeepSeek_V3_2/ocr/: DeepSeek_V3_2_ocr.txt
demo/DeepSeek_V3_2/validate/: validate.txt
demo/QWEN_TECHNICAL_REPORT/bookmarks/: bookmarks.txt
demo/QWEN_TECHNICAL_REPORT/extract-text/: QWEN_TECHNICAL_REPORT.txt
demo/QWEN_TECHNICAL_REPORT/info/: info.txt
demo/QWEN_TECHNICAL_REPORT/metadata/: metadata.txt
docs/: api.md  configuration.md
docs/commands/: README.md  bookmarks.md  compress.md  config.md  crop.md  decrypt.md  encrypt.md  extract-images.md  extract-pages.md  extract-text.md  flatten.md  images-to-pdf.md  info.md  interleave.md  list.md  merge.md  metadata.md  overlay.md  page-numbers.md  pdf-to-images.md  permissions.md  redact.md  remove-pages.md  resize.md  reverse.md  rotate.md  split.md  stamp.md  validate.md  watermark.md
scripts/: verify_demo.py
src/prism_docs/: __init__.py  cli.py
tests/: helpers.py  test_config_core.py  test_more_operations.py  test_operations.py  test_output_config.py  test_pages_extra.py  test_runner.py  test_security_basic.py  test_validate.py
(+64 files in other folders)
